# course1

./: .gitignore  bun.lockb  package-lock.json  package.json  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/api/: Cargo.toml
src-tauri/api/src/: decks.rs  entries.rs  entry_field_values.rs  entry_kind_fields.rs  entry_kinds.rs  entry_tags.rs  lib.rs  tags.rs
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: cards.rs  decks.rs  entries.rs  entry_field_values.rs  entry_kind_default_field.rs  entry_kind_fields.rs  entry_kinds.rs  entry_tags.rs  lib.rs  prelude.rs  tags.rs
src-tauri/ext/linked_hash_map/src/: lib.rs  serde.rs
src-tauri/ext/linked_hash_set/: Cargo.toml
src-tauri/ext/linked_hash_set/src/: lib.rs  serde.rs
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240528_130835_create_table.rs  m20240528_130835_create_table_entry_kinds.rs  m20240528_150752_add_entry_kinds.rs  m20240528_210622_add_deck.rs  m20240530_110319_create_table_entry_kinds.rs  m20240530_110941_create_table_entry_kind_fields.rs  m20240530_111734_create_table_entry_kind_default_field.rs  m20240530_112755_add_entry_kinds.rs  m20240603_121611_create_table_entries.rs  m20240603_123859_create_table_entry_field_values.rs  m20240604_001716_create_table_cards.rs  m20240604_002431_add_cards.rs  m20240604_132804_create_table_tags.rs  m20240604_133159_create_table_entry_tags.rs
src-tauri/service/: Cargo.toml
src-tauri/service/src/: cards.rs  decks.rs  entries.rs  entry_field_values.rs  entry_kind_default_field.rs  entry_kind_fields.rs  entry_kinds.rs  entry_tags.rs  lib.rs  tags.rs
src-tauri/service/src/ext/: mod.rs
src-tauri/src/: dto.rs  main.rs  windows.rs
src-tauri/src/api/: decks.rs
src-tauri/src/services/: decks.rs  mod.rs
src-tauri/src/windows/: api.rs  ext.rs  mod.rs  prelude.rs
(+112 files in other folders)
