[package]
name = "course1"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[workspace]
members = [".", "api", "entity", "migration", "service"]

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
api = { path = "api" }
migration = { path = "migration" }
tauri-plugin-context-menu = { path = "ext/tauri-plugin-context-menu" }
sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
tauri = { version = "1", features = [ "shell-open", "window-hide" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.21"
env_logger = "0.11.3"

[target."cfg(target_os = \"linux\")".dependencies]
gtk = { version = "0.15", features = [ "v3_20" ] }

[target."cfg(windows)".dependencies.windows]
version = "0.39.0"
features = [
    "Win32_UI_WindowsAndMessaging",
]

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
